--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "custom"
   ],
   "dependencies": {
+    "chalk" : "^0.5.1",
     "callsite": "^1.0.0",
     "minimist": "~0.2.0",
     "utils-merge": "~1.0.0"
