--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
@@ -22,6 +22,7 @@
     "custom"
   ],
   "dependencies": {
+    "better-assert": "^1.0.1",
     "callsite": "^1.0.0",
     "chalk": "^0.5.1",
     "minimist": "~0.2.0",
