--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "runtime",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
     "type": "git",
     "url": "https://github.com/stringparser/runtime"
   },
-  "main": "./lib/runtime",
   "scripts": {
-    "pool": "./pool",
+    "gulp" : "export DEV_ENV=gulp-runtime && gulp",
     "test": "make test"
   },
   "keywords": [
