--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "better-assert": "^1.0.1",
     "callsite": "^1.0.0",
-    "herro": "0.0.5",
+    "herro": "^0.1.12",
     "minimist": "~0.2.0",
     "utils-merge": "~1.0.0"
   },
