--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "findit": "^2.0.0",
     "herro": "^0.1.48",
     "minimist": "~0.2.0",
+    "utils-merge": "^1.0.0",
     "utils-type": "^0.1.28",
     "which": "^1.0.5"
   },
