update prior to 0.2

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "local"
   ],
   "dependencies": {
-    "callsite": "^1.0.0",
+    "callers-path": "^0.9.6",
     "debug": "^2.0.0",
     "findit": "^2.0.0",
     "herro": "^0.1.48",
+    "lodash.merge": "^2.4.1",
     "minimist": "^0.2.0",
-    "utils-merge": "^1.0.0",
     "utils-type": "^0.1.32",
     "which": "^1.0.5"
   },
