--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.1.67",
+  "version": "0.1.68",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
@@ -14,8 +14,8 @@
   "keywords": [
     "cli",
     "repl",
-    "stdin",
     "runtime",
+    "interface",
     "readline",
     "command",
     "custom",
