--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "lint": "jshint lib index.js --reporter node_modules/jshint-stylish/stylish.js --exclude node_modules",
-    "test": "npm run-script lint && mocha test/main.js --require should"
+    "test": "npm run-script lint && mocha test/main.js"
   },
   "keywords": [
     "cli",
