--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.1.68",
+  "version": "0.2.0",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
@@ -23,7 +23,6 @@
   ],
   "dependencies": {
     "callers-path": "^0.9.9",
-    "debug": "^2.0.0",
     "findit": "^2.0.0",
     "herro": "^0.1.48",
     "lodash.merge": "^2.4.1",
@@ -34,9 +33,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "jshint": "^2.5.5",
-    "jshint-stylish": "^0.4.0",
-    "mocha": "^1.21.4",
-    "should": "^4.0.4"
+    "jshint": "*",
+    "jshint-stylish": "*",
+    "mocha": "*",
+    "should": "*"
   }
 }
