--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
@@ -25,12 +25,11 @@
     "callers-path": "^0.9.9",
     "findit": "^2.0.0",
     "herro": "^0.1.48",
-    "lodash.merge": "^2.4.1",
     "minimist": "^0.2.0",
-    "utils-debug": "^0.5.21",
-    "utils-merge": "^1.0.0",
-    "utils-type": "^0.5.2",
-    "v8-callsites": "^1.0.35",
+    "through2": "^0.6.3",
+    "utils-debug": "^0.5.22",
+    "utils-type": "^0.8.10",
+    "v8-callsites": "^1.1.0",
     "which": "^1.0.5"
   },
   "license": "MIT",
