--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "local"
   ],
   "dependencies": {
-    "callers-path": "^0.9.9",
     "camelcase": "^1.0.1",
     "findit": "^2.0.0",
     "herro": "^0.1.48",
     "minimist": "^0.2.0",
+    "requirem": "^0.7.3",
     "through2": "^0.6.3",
     "utils-debug": "^0.5.22",
     "utils-type": "^0.8.10",
