--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "findup-sync": "^0.1.3",
     "herro": "^0.1.48",
     "minimist": "^0.2.0",
+    "pretty-hrtime": "^0.2.2",
     "requirem": "^0.7.5",
     "through2": "^0.6.3",
     "user-home": "^1.1.0",
