--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "utils-debug": "^0.5.22",
     "utils-type": "^0.8.10",
     "v8-callsites": "^1.1.0",
+    "whech": "^0.5.10",
     "which": "^1.0.5"
   },
   "license": "MIT",
