--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "a runtime interface",
   "author": "Javier Carrillo <stringparser@gmail.com> (http://www.stringparser.com)",
   "repository": {
@@ -23,7 +23,6 @@
   ],
   "dependencies": {
     "camelcase": "^1.0.1",
-    "findup-sync": "^0.1.3",
     "herro": "^0.1.48",
     "minimist": "^0.2.0",
     "pretty-hrtime": "^0.2.2",
@@ -33,8 +32,8 @@
     "utils-debug": "^0.5.22",
     "utils-type": "^0.8.10",
     "v8-callsites": "^1.1.0",
-    "whech": "^0.5.10",
-    "which": "^1.0.5"
+    "whech": "^0.5.13",
+    "semver": "^3.0.1"
   },
   "license": "MIT",
   "devDependencies": {
