--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "local"
   ],
   "dependencies": {
+    "camelcase": "^1.0.1",
     "herro": "^0.1.48",
     "minimist": "^0.2.0",
     "pretty-hrtime": "^0.2.2",
