--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "camelcase": "^1.0.1",
     "herro": "^0.1.48",
+    "lodash.clone": "^2.4.1",
     "minimist": "^0.2.0",
     "pretty-hrtime": "^0.2.2",
     "requirem": "^0.7.5",
