--- a/package.json
+++ b/package.json
@@ -22,17 +22,9 @@
     "local"
   ],
   "dependencies": {
-    "camelcase": "^1.0.1",
-    "herro": "^0.1.48",
-    "lodash.clone": "^2.4.1",
     "manifold": "^1.0.0",
-    "minimist": "^0.2.0",
     "pretty-hrtime": "^0.2.2",
-    "requirem": "^0.7.5",
-    "through2": "^0.6.3",
-    "utils-debug": "^0.5.22",
-    "utils-type": "^0.8.10",
-    "whech": "^0.5.24"
+    "utils-type": "^0.8.10"
   },
   "license": "MIT",
   "devDependencies": {
