time measures work, to improve: - add a reporter function to be called - lint the loop function on Runtime.next, its getting quite muddy

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "local"
   ],
   "dependencies": {
-    "manifold": "1.x.x",
-    "utils-type": "0.8.x",
     "lodash.clone": "2.x.x",
-    "pretty-hrtime": "0.2.x"
+    "manifold": "1.x.x",
+    "next-tick": "^0.2.2",
+    "pretty-hrtime": "0.2.x",
+    "utils-merge": "^1.0.0",
+    "utils-type": "0.8.x"
   },
   "license": "MIT",
   "devDependencies": {
