--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "local"
   ],
   "dependencies": {
+    "inherits": "^2.0.1",
     "lodash.clone": "2.x.x",
     "manifold": "1.x.x",
     "next-tick": "^0.2.x",
