Good news! - phated/async-done integrated with the module, now you can return anything that module suports

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "local"
   ],
   "dependencies": {
+    "async-done": "^1.0.0",
     "inherits": "^2.0.1",
     "lodash.clone": "2.x.x",
     "manifold": "1.x.x",
-    "next-tick": "^0.2.x",
+    "next-tick": "^0.2.2",
     "pretty-hrtime": "0.2.x",
-    "through2": "^0.6.3",
     "utils-merge": "^1.0.0",
     "utils-type": "0.8.x"
   },
