logging is helpful, no repetition without need for crazy checks

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-done": "^1.0.0",
     "inherits": "^2.0.1",
     "manifold": " 2.x.x",
+    "next-tick": "^0.2.2",
     "pretty-hrtime": "0.2.x",
     "utils-merge": "^1.0.0",
     "utils-type": "0.8.x"
