--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "async-done": "^1.0.0",
     "inherits": "^2.0.1",
+    "lodash.clone": "^3.0.0",
     "manifold": " 2.x.x",
-    "next-tick": "^0.2.2",
     "pretty-hrtime": "0.2.x",
     "utils-merge": "^1.0.0",
     "utils-type": "0.8.x"
