ordered .jshintrc setup

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,20 +1,20 @@
 {
-  "camelcase": true,
-  "curly": true,
-  "eqeqeq": true,
-  "freeze": true,
-  "indent": 2,
-  "newcap": false,
-  "quotmark": "single",
-  "maxdepth": 3,
-  "maxstatements": 50,
-  "maxlen": 80,
-  "eqnull": true,
-  "funcscope": true,
-  "strict": true,
-  "undef": true,
-  "unused": true,
   "node": true,
+  "curly": true,
+  "undef": true,
   "mocha": true,
-  "laxbreak" : true
+  "indent": 2,
+  "maxlen": 80,
+  "freeze": true,
+  "eqeqeq": true,
+  "eqnull": true,
+  "strict": true,
+  "unused": true,
+  "newcap": false,
+  "maxdepth": 3,
+  "quotmark": "single",
+  "camelcase": true,
+  "funcscope": true,
+  "laxbreak" : true,
+  "maxstatements": 50
 }
