--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp": "^3.x.x",
     "jshint": "*",
     "jshint-stylish": "*",
+    "mkdirp": "^0.5.0",
     "mocha": "*",
     "rimraf": "^2.3.1",
     "should": "*"
