npm start -> node index.js

--- a/examples/mongo/package.json
+++ b/examples/mongo/package.json
@@ -4,6 +4,7 @@
   "description": "example server with mongodb",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Javier Carrillo",
