--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "async-done": "^1.1.0",
+    "inherits": "^2.0.1",
     "lodash.merge": "^3.3.2",
     "utils-type": "^0.13.0"
   }
