--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "utils-type": "^0.13.0"
   },
   "devDependencies": {
+    "es6-promise": "^3.0.2",
     "eslint": "^1.0.0",
     "mocha": "^2.2.5",
-    "should": "^7.0.2"
+    "should": "^7.0.2",
+    "through2": "^2.0.0"
   }
 }
