--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "runtime",
-  "version": "0.10.4",
+  "version": "0.10.5",
+  "homepage": "http://github.com/stringparser/runtime",
   "description": "a runtime interface",
   "main": "index.js",
   "scripts": {
