--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "async-done": "^1.1.1",
     "inherits": "^2.0.1",
+    "lodash.before": "^3.0.3",
     "lodash.clone": "^3.0.3",
     "lodash.merge": "^3.3.2",
     "lodash.reduce": "^3.1.2",
