--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "homepage": "http://github.com/stringparser/runtime",
   "description": "a runtime interface",
   "main": "index.js",
@@ -8,6 +8,7 @@
     "lint": "eslint lib/*.js *.js",
     "test": "npm run lint && mocha test/index.js"
   },
+  "repository": "stringparser/runtime",
   "keywords": [
     "simple",
     "async",
