--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@ rules:
   no-unreachable: 2
   no-multi-spaces: 2
   space-infix-ops: 0
+  consistent-return: 0
   no-underscore-dangle: 0
   no-use-before-define: 0
   no-unused-expressions: 2
