--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "author": "Javier Carrillo Milla <stringparser@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "inherits": "^2.0.1",
     "async-done": "^1.1.1",
-    "utils-type": "^0.16.0",
+    "inherits": "^2.0.1",
     "lodash.clone": "^3.0.3",
-    "lodash.merge": "^3.3.2"
+    "lodash.merge": "^3.3.2",
+    "once": "^1.3.3",
+    "utils-type": "^0.16.0"
   },
   "devDependencies": {
     "archy": "^1.0.0",
