--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,11 @@ rules:
   no-func-assign: 2
   no-unreachable: 2
   no-multi-spaces: 2
+  keyword-spacing: 2
   space-infix-ops: 0
   consistent-return: 0
+  space-before-blocks: 2
   no-underscore-dangle: 0
   no-use-before-define: 0
   no-unused-expressions: 2
+  space-before-function-paren: 2
