--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "archy": "^1.0.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^1.10.3",
+    "eslint": "^3.3.x",
     "mocha": "^2.2.5",
     "should": "^7.0.2",
     "through2": "^2.0.0"
