--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "async-done": "^1.2.x",
+    "createClass": "^1.0.1",
     "inherits": "^2.0.1",
     "lodash.clone": "^3.0.3",
     "lodash.merge": "^3.3.2",
