--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime",
-  "version": "0.12.5",
+  "version": "0.12.6",
   "homepage": "http://github.com/stringparser/runtime",
   "description": "a runtime interface",
   "main": "index.js",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "async-done": "^1.2.x",
-    "createClass": "^1.0.1",
+    "createClass": "^1.0.x",
     "inherits": "^2.0.1",
     "lodash.clone": "^3.0.3",
     "lodash.merge": "^3.3.2",
