--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   "dependencies": {
     "async-done": "^1.2.x",
     "createClass": "^1.0.x",
-    "inherits": "^2.0.1",
     "lodash.clone": "^3.0.3",
     "lodash.merge": "^3.3.2",
-    "once": "^1.3.3",
-    "utils-type": "^0.16.0"
+    "once": "^1.3.3"
   },
   "devDependencies": {
     "archy": "^1.0.0",
